add blur and focus

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 .App {
   text-align: start;
+
+  .error {
+    border: 1px solid red
+  }
 }
 
 .App-logo {
@@ -23,11 +27,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
